@@ -1,3 +1,8 @@
+2003-07-16  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* gui/oprof_start_config.h:
+	* gui/oprof_start_config.cpp: remove dead code, fix kernel_only read
+
 2003-07-16  John Levon  <levon@movementarian.org>
 
 	* utils/opcontrol: fix typo that was partly breaking
